tests/NormalTests/paczka1/fuzzy1/95709310.err
Error in line 1: 84yTq S135 55,4
Error in line 6: X7Y A670 6,3
Error in line 12: X7Y S135 35,2
Error in line 20: X7Y S561 6,1
Error in line 22: X7Y A265 45,7
Error in line 18: 84yTq A265 88,7
Error in line 26: uOZ3Ai3jBd A670 7,4
Error in line 34: j4MJnqy5hoO S561 21,3
Error in line 35: uOZ3Ai3jBd A70 24,2
